all pages + 70% pages adaptive

--- a/src/css/parts/colors.less
+++ b/src/css/parts/colors.less
@@ -47,3 +47,6 @@
 @dark: #000;
 @table-nth: #e8e8e8;
 @table-td: #d7d7d7;
+@popup-header: #af0020;
+@popup-input_border: #6e727e;
+@popup-input_shadow: #6d0d00;
