--- a/src/css/style.less
+++ b/src/css/style.less
@@ -2,4 +2,5 @@
 @import "parts/colors.less";
 @import "parts/mixins.less";
 @import "parts/main.less";
+@import "parts/popup.less";
 @import "parts/media.less";
