--- a/src/templates/about.jade
+++ b/src/templates/about.jade
@@ -3,6 +3,7 @@ include includes/header
 include includes/breadcrumbs
 include includes/about-content
 include includes/developer
+include includes/popup
 include includes/footer
 include includes/scripts
 include includes/mixins
@@ -26,4 +27,5 @@ html(lang="en")
         footer
             +footer()
         +developer()
+        +popup()
         +scripts()
