--- a/src/templates/action.jade
+++ b/src/templates/action.jade
@@ -2,6 +2,7 @@ include includes/head
 include includes/header
 include includes/breadcrumbs
 include includes/one-action
+include includes/popup
 include includes/footer
 include includes/scripts
 include includes/mixins
@@ -22,4 +23,5 @@ html(lang="en")
 
         footer
             +footer()
+            +popup()
             +scripts()
