--- a/src/templates/contacts.jade
+++ b/src/templates/contacts.jade
@@ -3,6 +3,7 @@ include includes/header
 include includes/breadcrumbs
 include includes/contacts
 include includes/footer
+include includes/popup
 include includes/scripts
 include includes/mixins
 doctype html
@@ -21,4 +22,5 @@ html(lang="en")
 
         footer
             +footer()
+            +popup()
             +scripts()
