--- a/src/templates/includes/header.jade
+++ b/src/templates/includes/header.jade
@@ -28,7 +28,7 @@ mixin header()
                      span  44-99-00
                   p.title: a(href="javascript:void(0)")  Все филиалы
             .col-md-2.reserv-block
-               a(href="javascript:void(0)").reservation
+               a(href="javascript:void(0)").reservation.js-view-popup
                   +svg('car')
                   span  Забронировать место
          .row
