--- a/src/templates/includes/price-content.jade
+++ b/src/templates/includes/price-content.jade
@@ -10,48 +10,120 @@ mixin price-content()
          .row
             .col-md-12
                p.city   г. Тамбов
-               table.price-table
-                  thead
-                     tr
-                        td Адрес
-                        td Категория
-                        td Стоимость (теория)
-                        td Стоимость (вождение)
-                        td Полная стоимость
-                  tbody
-                     tr
-                        td ул. Сенько 24а
-                        td «В»
-                        td 13900 руб.
-                        td 144 руб./час
-                        td 22 000 руб. с (ГСМ)
-                     tr
-                        td ул. Сенько 24а
-                        td «А»
-                        td -
-                        td -
-                        td 8 000 руб. с (ГСМ)
-                     tr
-                        td ул. Сенько 24а
-                        td «А1»
-                        td -
-                        td -
-                        td 22 000 руб. с (ГСМ)
-                     tr
-                        td ул. Астраханская 189a
-                        td «B»
-                        td 13900 руб
-                        td 144 руб/час
-                        td 22 000 руб. с (ГСМ)
-                     tr
-                        td ул. Астраханская 189a
-                        td «A1»
-                        td -
-                        td -
-                        td 8 000 руб. с (ГСМ)
-                     tr
-                        td ул. Рылеева 61 б
-                        td «В»
-                        td 13900 руб.
-                        td 144 руб./час
-                        td 22 000 руб. с (ГСМ)
+               .wrap-price
+                  table.price-table
+                     thead
+                        tr
+                           td Адрес
+                           td Категория
+                           td Стоимость (теория)
+                           td Стоимость (вождение)
+                           td Полная стоимость
+                     tbody
+                        tr
+                           td ул. Сенько 24а
+                           td «В»
+                           td 13900 руб.
+                           td 144 руб./час
+                           td 22 000 руб. с (ГСМ)
+                        tr
+                           td ул. Сенько 24а
+                           td «А»
+                           td -
+                           td -
+                           td 8 000 руб. с (ГСМ)
+                        tr
+                           td ул. Сенько 24а
+                           td «А1»
+                           td -
+                           td -
+                           td 22 000 руб. с (ГСМ)
+                        tr
+                           td ул. Астраханская 189a
+                           td «B»
+                           td 13900 руб
+                           td 144 руб/час
+                           td 22 000 руб. с (ГСМ)
+                        tr
+                           td ул. Астраханская 189a
+                           td «A1»
+                           td -
+                           td -
+                           td 8 000 руб. с (ГСМ)
+                        tr
+                           td ул. Рылеева 61 б
+                           td «В»
+                           td 13900 руб.
+                           td 144 руб./час
+                           td 22 000 руб. с (ГСМ)
+            .col-md-12
+               p.city   г. Мичуринск
+               .wrap-price
+                  table.price-table
+                     thead
+                        tr
+                           td Адрес
+                           td Категория
+                           td Стоимость (теория)
+                           td Стоимость (вождение)
+                           td Полная стоимость
+                     tbody
+                        tr
+                           td ул. Полтавская 55
+                           td «В»
+                           td 13900 руб.
+                           td 127 руб./час
+                           td 22 000 руб. с (ГСМ)
+                        tr
+                           td ул. Полтавская 55
+                           td «А»
+                           td -
+                           td -
+                           td 8 000 руб. с (ГСМ)
+                        tr
+                           td ул. Полтавская 55
+                           td «А1»
+                           td -
+                           td -
+                           td 8 000 руб. с (ГСМ)
+                        tr
+                           td КЧТ5 ул. 7 Ноября 38
+                           td «B»
+                           td 13900 руб
+                           td 127 руб/час
+                           td 21 000 руб. с (ГСМ)
+                        tr
+                           td КЧТ5 ул. 7 Ноября 38
+                           td «A»
+                           td -
+                           td -
+                           td 8 000 руб. с (ГСМ)
+                        tr
+                           td КЧТ5 ул. 7 Ноября 38
+                           td «А1»
+                           td -
+                           td -
+                           td 8 000 руб. с (ГСМ)
+         .row
+            .col-md-12
+               p.credit-title Обучение в кредит
+               p.bold   Впервые в городе Тамбове и городе Мичуринске
+               .price-content__text
+                  p Автошкола ГАРАНТ предоставляет возможность своим клиентам оплатить обучение на категории "А", "А1", "В" в рассрочку сроком до 1 года.
+                     |  Кредит предоставляется ОАО «Россельхозбанк».
+                  span.border  Ежемесячные платежи: 2400 рублей в месяц.
+               p.b  Необходимый пакет документов:
+               ul
+                  li Заявка-анкета Заемщика на предоставление кредита
+                  li Паспорт гражданина РФ
+                  li Военный билет - для мужчин в возрасте до 27 лет (призывное свидетельство об отсрочке службы в армии - для студентов)
+                  li Документы о доходах Заемщика за последние 6 месяцев (Справка по форме 2-НДФЛ, заверенная организацией – работодателем)
+                  li копия трудовой книжки/трудового договора, заверенная работодателем, не более чем за 30 (тридцати) дней до подачи  Заявки-анкеты Заемщика на предоставление кредита;
+               p.b  Требования к заемщику:
+               ul
+                  li Возраст: от 23 до 60-ти лет для мужчин, 55 лет – для женщин (включительно) на момент окончательного возврата кредита
+                  li Гражданство: Российской Федерации
+                  li Стаж работы: непрерывный стаж работы на последнем месте не менее 4 месяцев
+                  li Регистрация: постоянная регистрация по месту расположения филиала, дополнительного офиса Банка
+
+
