--- a/src/templates/includes/type-learn.jade
+++ b/src/templates/includes/type-learn.jade
@@ -13,7 +13,7 @@ mixin type-learn()
                     img(src="../img/u.jpg")
                     img(src="../img/u.jpg")
                     img(src="../img/u.jpg")
-                 a(href="javascript:void(0)")   Записаться
+                 a(href="javascript:void(0)").js-view-popup   Записаться
                   +svg('arrow')
             .col-md-6
                p.title.online
@@ -26,5 +26,5 @@ mixin type-learn()
                      li Обучение везде
                      li Нет пропусков
                      li Обучение в удобное для Вас время
-                  a(href="javascript:void(0)")   Записаться
+                  a(href="javascript:void(0)").js-view-popup   Записаться
                      +svg('arrow')
