--- a/src/templates/prices.jade
+++ b/src/templates/prices.jade
@@ -4,6 +4,7 @@ include includes/breadcrumbs
 include includes/price-content
 include includes/footer
 include includes/scripts
+include includes/popup
 include includes/mixins
 doctype html
 html(lang="en")
@@ -21,4 +22,5 @@ html(lang="en")
 
         footer
             +footer()
+            +popup()
             +scripts()
