--- a/src/css/parts/main.less
+++ b/src/css/parts/main.less
@@ -4,6 +4,7 @@
 }
 
 body {
+	position: relative;
 	font-family: @open;
 	font-size: 14px;
 }
@@ -208,6 +209,13 @@ header {
 }
 
 .content {
+
+	p, span {
+
+		&.b {
+			font-weight: bold;
+		}
+	}
 
 	.reservation {
 		padding-top: 52px;
@@ -1632,6 +1640,56 @@ header {
 	}
 
 	.price-content {
+		padding-bottom: 20px;
+
+		.wrap-price {
+
+			@media (max-width: 767px) {
+
+				& {
+					overflow: scroll;
+				}
+			}
+		}
+
+		&__text {
+
+			span.border {
+				padding-left: 10px;
+				padding-right: 10px;
+				font-size: 18px;
+				font-weight: 600;
+				color: @white;
+				background-color: @table-td_odd;
+			}
+
+			p {
+				margin-bottom: 20px;
+			}
+		}
+
+		ul {
+
+			li {
+				position: relative;
+				padding-left: 15px;
+				font-size: 18px;
+				color: @h2-color;
+				list-style-type: none;
+
+				&::before {
+					position: absolute;
+					left: 0;
+					top: 12px;
+					display: block;
+					width: 5px;
+					height: 5px;
+					border-radius: 50%;
+					background-color: @table-td_odd;
+					content: '';
+				}
+			}
+		}
 
 		p {
 
@@ -1645,23 +1703,57 @@ header {
 
 			&.city {
 				margin-top: 9px;
-				margin-bottom: 0;
+				margin-bottom: 9px;
 				font-size: 18px;
 				font-weight: 600;
 				color: @h2-color;
 				text-transform: uppercase;
+			}
+
+			&.credit-title {
+				margin-bottom: 19px;
+				position: relative;
+				padding-bottom: 12px;
+				font-size: 27px;
+				font-weight: 600;
+				color: @acf;
+				letter-spacing: .5px;
+
+				&::before {
+					position: absolute;
+					left: 0;
+					bottom: 0;
+					display: block;
+					width: 67px;
+					height: 3px;
+					background-color: @border-title;
+					content: '';
+				}
+			}
+
+			&.bold {
+				font-size: 18px;
+				font-weight: bold;
+				color: @h2-color;
+			}
+
+			&.b {
+				margin-top: 20px;
 			}
 		}
 
 		table {
 
 			&.price-table {
+				margin-bottom: 56px;
 				width: 100%;
 
 				thead {
 
 					td {
-						padding: 5px;
+						padding-top: 6px;
+						padding-bottom: 6px;
+						padding-left: 12px;
 						font-size: 14px;
 						line-height: 22px;
 						color: @white;
@@ -1702,7 +1794,7 @@ header {
 					}
 
 					td {
-						padding: 5px;
+						padding: 5px 7px;
 						font-size: 15px;
 						line-height: 22px;
 						color: @page-p;
@@ -1713,6 +1805,135 @@ header {
 							color: @dark;
 						}
 					}
+				}
+			}
+		}
+	}
+
+	.routes {
+
+		.plans-block {
+			margin-top: 30px;
+			padding-top: 10px;
+
+			.item {
+				text-align: center;
+			}
+		}
+
+		p {
+			font-size: 15px;
+			line-height: 22px;
+			color: @page-p;
+
+			&.in-city {
+				margin-top: 35px;
+				font-size: 25px;
+				color: @h2-color;
+			}
+
+			&.title {
+				margin-bottom: 19px;
+				position: relative;
+				padding-bottom: 22px;
+				font-size: 27px;
+				font-weight: 600;
+				color: @acf;
+				letter-spacing: .5px;
+
+				&::before {
+					position: absolute;
+					left: 0;
+					bottom: 0;
+					display: block;
+					width: 67px;
+					height: 3px;
+					background-color: red;
+					content: '';
+				}
+			}
+		}
+	}
+
+	.programms {
+		margin-top: 52px;
+
+		&__list {
+			margin-top: 29px;
+		}
+
+		p {
+			font-size: 15px;
+			line-height: 22px;
+			color: @page-p;
+
+			&.title {
+				margin-bottom: 19px;
+				position: relative;
+				padding-bottom: 20px;
+				font-size: 27px;
+				font-weight: 600;
+				color: @acf;
+				letter-spacing: .5px;
+
+				&::before {
+					position: absolute;
+					left: 0;
+					bottom: 0;
+					display: block;
+					width: 67px;
+					height: 3px;
+					background-color: red;
+					content: '';
+				}
+			}
+		}
+
+		a {
+			display: block;
+			margin-bottom: 15px;
+			font-size: 16px;
+			padding-left: 68px;
+			background-image: url(../img/pdf.svg);
+			background-size: 48px 50px;
+			background-position: left center;
+			background-repeat: no-repeat;
+			color: @acf;
+		}
+	}
+
+	.order-training {
+		margin-top: 50px;
+		padding-top: 35px;
+		background-color: @classes-bg;
+
+		.contacts__text {
+			margin-top: 0;
+		}
+
+		p {
+			font-size: 15px;
+			line-height: 22px;
+			color: @page-p;
+
+			&.title {
+				margin-bottom: 19px;
+				position: relative;
+				padding-bottom: 20px;
+				font-size: 27px;
+				font-weight: 600;
+				color: @acf;
+				letter-spacing: .5px;
+
+				&::before {
+					position: absolute;
+					left: 0;
+					bottom: 0;
+					display: block;
+					width: 67px;
+					height: 3px;
+					background-color: red;
+					content: '';
 				}
 			}
 		}
