--- a/src/templates/actions.jade
+++ b/src/templates/actions.jade
@@ -2,6 +2,7 @@ include includes/head
 include includes/header
 include includes/breadcrumbs
 include includes/actions-content
+include includes/popup
 include includes/footer
 include includes/scripts
 include includes/mixins
@@ -20,5 +21,6 @@ html(lang="en")
            +actions-content()
 
         footer
-           +footer()
-           +scripts()
+            +footer()
+            +popup()
+            +scripts()
