minify images ads reviews page

--- a/src/css/parts/main.less
+++ b/src/css/parts/main.less
@@ -1938,6 +1938,14 @@ header {
 			}
 		}
 	}
+
+	.reviews-all {
+
+		.vk-block {
+			margin-top: 30px;
+			margin-bottom: 50px;
+		}
+	}
 }
 
 footer {
