--- a/src/templates/includes/reviews.jade
+++ b/src/templates/includes/reviews.jade
@@ -6,7 +6,8 @@ mixin reviews()
                p.title-block  Отзывы о нас
             .col-md-12
                .vidget-vk
+                  #vk_comments
                   <!-- Put this script tag to the <head> of your page -->
-                  //script(src="http://vk.com/js/api/openapi.js?127")
-                  //script(type='text/javascript')   VK.init({apiId: API_ID, onlyWidgets: true}); VK.Widgets.Comments("vk_comments", {limit: 10, width: "100%", attach: "*"});
+                  script(src="http://vk.com/js/api/openapi.js?127")
+                  script(type='text/javascript')   VK.init({apiId: API_ID, onlyWidgets: true}); VK.Widgets.Comments("vk_comments", {limit: 10, width: "100%", attach: "*"});
                a(href="javascript:void(0)").all-reviews   Все отзывы
