--- a/src/css/parts/colors.less
+++ b/src/css/parts/colors.less
@@ -50,3 +50,5 @@
 @popup-header: #af0020;
 @popup-input_border: #6e727e;
 @popup-input_shadow: #6d0d00;
+@burger-span: #9e001d;
+@back-menu: #38414a;
